# coding-exercises

./: .gitignore  A_Kevin_and_Arithmetic.cpp  A_Minimal_Coprime.cpp  A_String.cpp  B_Clockwork.cpp  B_Subsequence_Update.cpp  CMakeLists.txt  C_Game_of_Mathletes.cpp  ConsoleApplication56.sln  README.md
.cph/: .A_Kevin_and_Arithmetic.cpp_318d0b88afff322290849bc26d645835.prob  .A_Minimal_Coprime.cpp_c90ce46ac9ccd3c7b23dc20a6f0cacda.prob  .A_String.cpp_fb6cc80436d2673cb3fd2f2939c873ab.prob  .B_Clockwork.cpp_efa071fff5975065558d46204f166960.prob  .B_Subsequence_Update.cpp_edd10734af1023f1cec737010e1f492c.prob  .C_Game_of_Mathletes.cpp_ea81fb39a39e22d29efe011b317443ee.prob
2024/: CMakeLists.txt  acwing94.cpp
2025/: CMakeLists.txt  acwing92.cpp  acwing93.cpp  acwing95.cpp  me.txt
ConsoleApplication56/: ConsoleApplication56.vcxproj  ConsoleApplication56.vcxproj.filters  LRUCache.cpp  LRUCache.h  ListNode.h  Node.h  Point.h  RandomListNode.h  Solution.h  UndirectedGraphNode.h  addTwoNumbers.cpp  buildTree.cpp  canCompleteCircuit.cpp  candy.cpp  connect.cpp  convert.cpp  detectCycle.cpp  evalRPN.cpp  exist.cpp  findLadders.cpp  flatten.cpp  fullJustify.cpp  hasCycle.cpp  isMatch2.cpp  isPalindrome.cpp  isScramble.cpp  jump.cpp  ladderLength.cpp  largestRectangleArea.cpp  lengthOfLongestSubstring.cpp  levelOrderBottom.cpp  main.cpp  (+17 more)
oj-2023/: CMakeLists.txt  hiho-1142.cpp  lanqiao-1122.cpp  luogu-3745.cpp  luogu-cf1a.cpp  luogu-p1462.cpp  luogu-p1540.cpp  luogu-p1824.cpp  luogu-p1886.cpp  luogu-p1996.cpp  luogu-p2947.cpp  luogu-p3378.cpp  luogu-p3382.cpp  poj-3122.cpp
(+38 files in other folders)
